[package]
name = "amzn-smt-strings"
version = "0.1.0"
description = "A library for manipulating SMT-LIB strings and regular expressions"
repository = "https://github.com/awslabs/rust-smt-strings"
authors = ["Bruno Dutertre <dutebrun@amazon.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["smt", "smt-lib", "strings", "regular expressions"]
categories = ["science"]
edition = "2018"

[profile.release]
lto = true
